# Crypto

./: .gitignore  README.md  pyproject.toml
funcoin/: pyproject.toml
funcoin/src/funcoin/: block1018.py  blockchain.py  blockchain2.py  chat_server.py  hashing_images.py  hashing_strings.py  my_server.py  proof_of_work.py  secret_phrase.py  unforgeable2.py
my_project/: current_price.py
