[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Your Name <ivanjuliusoliver@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"  # Updated version

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
